fixed button spacing

--- a/src/app/styles/ui.css
+++ b/src/app/styles/ui.css
@@ -61,7 +61,7 @@
 }
 
 button {
-    margin: 0.5rem;
+    margin-top: 32px;
 }
 
 .footer {
